--- a/websitestyle.css
+++ b/websitestyle.css
@@ -3,7 +3,7 @@
 }
 
 #mainpagetitle {
-    color: grey;
+    color: #555;
     font-size: 250%;
     text-align: center;
     font-family: "Times New Roman", Times, serif;
@@ -11,15 +11,15 @@
 
 #todolist {
     font-family: "Times New Roman", Times, serif;
-    color: grey;
+    color: #555;
     text-align: justify;
 }
 h2{
-  color: grey;
+  color: #555;
 }
 
 #moreinfo {
-  background-color: grey;
+  background-color: white;
   font-style: italic;
   font-size: 100%;
 }
@@ -32,9 +32,8 @@ ul.topnav {
     background-color: #333;
 }
 
-/* Float the list items side by side */
 ul.topnav li {float: left;}
-/* Style the links inside the list items */
+
 ul.topnav li a {
     display: inline-block;
     color: #f2f2f2;
@@ -44,5 +43,5 @@ ul.topnav li a {
     transition: 0.3s;
     font-size: 17px;
 }
-/* Change background color of links on hover */
+
 ul.topnav li a:hover {background-color: #555;}
